# complexity-scaling

./: .gitignore  README.md  data_gen.py  data_utils.py  fsdp_training.py  gzip_difficulty.py  main.py  pyproject.toml  scaling_results.jsonl  training.py
